# Langchain

./: .gitignore
AIAgent/: agent.py  requirements.txt  simpleAgent.py
Chains/: conditionalChain.py  parallelChain.py  requirements.txt  sequentialChains.py  simpleChains.py
Medical Chatbot/: template.sh
Models/: pyproject.toml  requirements.txt
Models/ChatModels/: groq_chatmodel.py  hf_local_chatmodel.py  openai_chatmodel.py
Models/EmbeddingModels/: hf_local_embeddings.py  openai_docs_embedding.py  openai_embedding.py
Models/LLM's/: llm_demo.py
Models/Project/: similarity_search.py
Output_parser/: jsonoutputparser.py  pydanticoutputparser.py  requirements.txt  stroutputparser.py  stroutputparser1.py  structuredoutputparser.py
Prompts/: chat_bot.py  chat_prompt_template.py  generate_prompt.py  messages.py  messages_placeholder.py  prompt_ui.py  requirements.txt  template.json
RAG/DocumentLoader/: csv_loader.py  directory_loader.py  pdf_loader.py  requirements.txt  text_loader.py  web_loader.py
RAG/TextSplitter/: length_structure.py  python_code_splitting.py  requirements.txt  text_structure.py
Runnables/: requirements.txt  runnableBranch.py  runnableLambda.py  runnableParallel.py  runnablePassthrough.py  runnableSequence.py
Structured_Output/: pydantic_demo.py  requirements.txt  type_dict.py  with_structured_output_json.py  with_structured_output_pydantic.py  with_structured_output_typedict.py
ToolCalling/: requirements.txt  tool.py
Tools/: baseTool.py  customTool.py  requirements.txt  searchTool.py  structuredTools.py  toolkit.py
